# lqg

./: .gitignore  404.html  CCN_2022_Tutorial.ipynb  README.md  convert_tracking_to_data_mat.py  cpp_data_fit.py  index.html  main.py  mkdocs.yml  parameter_recovery.py  pyproject.toml  requirements.txt  robustness.py  setup.py  sitemap.xml  stabilization.py
.github/workflows/: ci.yml
api/: index.html
data/: data.mat
docs/: README.md  TutorialTest.ipynb  api.md  simple.ipynb  temp.ipynb
docs/source/: conf.py  index.rst  lqg.infer.rst  lqg.rst  lqg.tracking.rst  modules.rst
docs/stylesheets/: extra.css
docs/tutorials/: data.ipynb  index.md
invlqg/: kalman.py  lqr.py  model.py  riccati.py
invlqg/fixepoint/: converge.py  implicit.py  loop.py
invlqg/infer/: __init__.py  mle.py  models.py  prior.py  utils.py
invlqg/tracking/: __init__.py  basic.py  eye.py  kf.py  leap.py  subjective.py
lqg/: __init__.py  ccg.py  glqg.py  io.py  kalman.py  lqg.py  lqr.py  model.py  optim.py  riccati.py  spec.py  system.py  utils.py
lqg/belief/: kf.py
lqg/control/: glqr.py  lqr.py
lqg/infer/: __init__.py  map.py  mle.py  models.py  prior.py  utils.py
lqg/tracking/: __init__.py  basic.py  delay.py  eye.py  kf.py  leap.py  multisensory.py  point_mass.py  signal_dependent.py  subjective.py  three_dims.py
notebooks/: 01-HowTo.ipynb  02-Data.ipynb  03-CCN.ipynb  03-Visualization.ipynb  04-SlowVelocityPrior.ipynb  05-Tutorial.ipynb  06-InitialUncertainty.ipynb  2D-Visualization.ipynb  Data.ipynb  FaceStabilization.ipynb  HandModel.ipynb  Tutorial.ipynb
search/: search_index.json
tests/: infer_test.py  lqg_test.py  util_test.py
tutorials/: index.html
tutorials/data/: index.html
