[project]
name = "lqg"
version = "0.2.13"
description = "(Inverse) optimal control for linear-quadratic Gaussian systems"
authors = [{ name = "Dominik Straub", email = "dominikstrb@mailbox.org" }]
requires-python = ">=3.10"
readme = "docs/README.md"
license = "AGPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "jax>=0.4.13",
    "numpyro>=0.12.1",
    "matplotlib>=3.2.2",
    "arviz>=0.16.1",
]

[dependency-groups]
dev = ["jupyter>=1.0.0,<2"]
test = ["pytest>=7.4.0,<8"]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
